@@ -36,7 +36,7 @@
 .RE
 .PP
 ..
-.TH TM 3
+.TH TV 3
 .SH NAME
 tv \- high resolution time support
 .SH SYNOPSIS
